[workspace]
resolver = "2"

members = [
    "aykroyd",
    "aykroyd-derive",
    "aykroyd-migrate",
    "aykroyd-v2",
    "bb8-aykroyd",
    "deadpool-aykroyd",
    "r2d2-aykroyd",
    "example",
    "myg",
]

default-members = [
    "aykroyd",
    "aykroyd-derive",
    "aykroyd-migrate",
    "myg",
]
