[workspace]
resolver = "2"

members = [
    "aykroyd",
    "aykroyd-derive",
    "aykroyd-migrate",
    "aykroyd-v2",
    "aykroyd-v2-derive",
    "aykroyd-v2-example",
    "bb8-aykroyd",
    "deadpool-aykroyd",
    "r2d2-aykroyd",
    "example",
    "myg",
]

default-members = [
    "aykroyd",
    "aykroyd-derive",
    "aykroyd-migrate",
    "myg",
]
