[package]
name = "akroyd-derive"
description = "Derive macros for akroyd:  an opinionated micro-ORM for PostgreSQL."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrew Dona-Couch <akroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/akroyd"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
