[package]
name = "akroyd-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
akroyd = { version = "0.1", features = ["derive"], path = "../akroyd" }

chrono = "0.4"
generic-array = "0.14"
itertools = "0.10"
sha3 = "0.10"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[dev-dependencies]
hex-literal = "0.2"
