[package]
name = "akroyd"
description = "An opinionated micro-ORM for PostgreSQL."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Andrew Dona-Couch <akroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/akroyd"
keywords = ["orm", "postgres", "postgresql", "sql"]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
derive = ["akroyd-derive"]

sync = ["postgres"]
async = ["async-trait"]

[dependencies]
akroyd-derive = { path = "../akroyd-derive", optional = true }
futures-util = "0.3"
postgres = { version = "0.19", optional = true }
tokio-postgres = "0.7"
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
tokio = { version = "1", features = ["full"] }
