[package]
name = "aykroyd-derive"
description = "Derive macros for aykroyd: zero-overhead ergonomic data access for Rust."
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Andrew Dona-Couch <aykroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/aykroyd"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
