[package]
name = "aykroyd-v2"
version = "0.1.0"
edition = "2021"

[features]
default = []

derive = ["dep:aykroyd-v2-derive"]

mysql = ["dep:mysql"]
postgres = ["dep:postgres", "dep:tokio-postgres"]
rusqlite = ["dep:rusqlite"]
tokio-postgres = ["dep:tokio-postgres", "dep:tokio"]

[dependencies.aykroyd-v2-derive]
path = "../aykroyd-v2-derive"
optional = true

[dependencies.mysql]
version = "24"
optional = true

[dependencies.postgres]
version = "0.19"
optional = true

[dependencies.rusqlite]
version = "0.30"
optional = true

[dependencies.tokio]
version = "1"
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true

[dev-dependencies]
async-trait = "0.1"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
