[package]
name = "aykroyd"
description = "Zero-overhead ergonomic data access for Rust."
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Andrew Dona-Couch <aykroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/aykroyd"
documentation = "https://docs.rs/aykroyd/latest/aykroyd/"
readme = "../README.md"
keywords = ["orm", "postgres", "sql", "mysql", "sqlite"]
categories = ["database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

derive = ["dep:aykroyd-derive"]

mysql = ["dep:mysql"]
postgres = ["dep:postgres", "dep:tokio-postgres"]
rusqlite = ["dep:rusqlite"]
tokio-postgres = ["dep:tokio-postgres", "dep:tokio"]

[dependencies.aykroyd-derive]
path = "../aykroyd-derive"
version = "0.2"
optional = true

[dependencies.mysql]
version = "24"
optional = true

[dependencies.postgres]
version = "0.19"
optional = true

[dependencies.rusqlite]
version = "0.30"
optional = true

[dependencies.tokio]
version = "1"
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true

[dev-dependencies]
async-trait = "0.1"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
tokio = { version = "1", features = ["full"] }
trybuild = { version = "1" }
