[package]
name = "bb8-aykroyd"
version = "0.2.0"
edition = "2021"
description = "Aykroyd micro-ORM for the bb8 connection pool."
license = "MIT"
authors = ["Andrew Dona-Couch <aykroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/aykroyd"
readme = "./README.md"
documentation = "https://docs.rs/bb8-aykroyd/latest/bb8_aykroyd/"

[features]
default = []

tokio-postgres = ["aykroyd/tokio-postgres", "dep:bb8-postgres", "dep:tokio-postgres"]

[dependencies]
aykroyd = { version = "0.3.0", path = "../aykroyd" }
async-trait = "0.1"
bb8 = "0.8"
bb8-postgres = { version = "0.8", optional = true }
tokio-postgres = { version = "0.7", optional = true }
