[package]
name = "deadpool-aykroyd"
version = "0.1.0"
edition = "2021"
description = "Aykroyd micro-ORM for the deadpool connection pool."
license = "MIT"
authors = ["Andrew Dona-Couch <aykroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/aykroyd"
documentation = "https://docs.rs/deadpool-aykroyd/latest/deadpool_aykroyd/"

[dependencies]
async-trait = "0.1"
aykroyd = { version = "0.2", features = ["async"], path = "../aykroyd" }
deadpool = "0.9"
deadpool-postgres = "0.10"
tokio = "1"
tokio-postgres = "0.7"
