[package]
name = "example"
version = "0.1.0"
edition = "2021"

[features]
full = []
lite = []

sync = ["aykroyd-migrate/sync"]
async = ["aykroyd-migrate/async"]

[dependencies]
aykroyd = { version = "0.1", path = "../aykroyd" }
aykroyd-migrate = { path = "../aykroyd-migrate" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

[build-dependencies]
aykroyd-migrate = { path = "../aykroyd-migrate" }
