[package]
name = "r2d2-aykroyd"
version = "0.2.0"
edition = "2021"
description = "Aykroyd micro-ORM for the r2d2 connection pool."
license = "MIT"
authors = ["Andrew Dona-Couch <aykroyd@couchand.com>"]
repository = "https://git.sr.ht/~couch/aykroyd"
readme = "./README.md"
documentation = "https://docs.rs/r2d2-aykroyd/latest/r2d2_aykroyd/"

[features]
default = []

mysql = ["aykroyd/mysql", "dep:mysql", "dep:r2d2_mysql"]
postgres = ["aykroyd/postgres", "dep:postgres", "dep:r2d2_postgres"]
rusqlite = ["aykroyd/rusqlite", "dep:rusqlite", "dep:r2d2_sqlite"]

[dependencies]
aykroyd = { version = "0.3.0-rc.1", path = "../aykroyd" }
mysql = { version = "24", optional = true }
r2d2 = "0.8"
r2d2_mysql = { version = "24", optional = true }
r2d2_postgres = { version = "0.18", optional = true }
r2d2_sqlite = { version = "0.23", optional = true }
rusqlite = { version = "0.30", optional = true }
postgres = { version = "0.19", optional = true }

[dev-dependencies]
aykroyd = { version = "0.3.0-rc.1", path = "../aykroyd", features = ["derive"] }
